Add nano editor